attempt to fix scroll on iphone

--- a/sfht/css/style.css
+++ b/sfht/css/style.css
@@ -45,6 +45,7 @@ a:hover {
 .img-wrapper {
 	position: fixed;
 	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
 	width: 100vw;
 	top: 0;
 	z-index: -1;
